HW1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
  labels:
    name: goappdeploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gopod
  template: 
    metadata:
      labels:
        app: gopod
    spec:
      imagePullSecrets:
        - name: mysecret
      containers:
      - name: gopod
        image: mrlvs/go:v1.0.0
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
