HW1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
  labels:
    env: test
    owner: iam
spec:
  selector:
    app: gopod
  ports:
   - port: 3000
